welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
redTicket:2: error: ';' expected but integer literal found.
  if (a==b && b==c) { if(a==2) {return} 10 else {return5} }
                                        ^